--- a/Solidagoren/index-ru.html
+++ b/Solidagoren/index-ru.html
@@ -237,8 +237,8 @@
                     <p>Как хорошо снова радоваться жизни и проводить время с моей маленькой озорницей. После консультации с врачом, ближайшей аптеке по дороге приобрели Солидагорен. Кстати, он <b>совсем не горький</b>, в отличие от других капель. А еще мне понравилось, что <b>не нужно глотать таблетки </b></p>
                 </div>
                 <div class="story-text_subtext">
-                    <h5><b>Як приймати</b><br>
-                        Солідагорен?</h5>
+                    <h5><b>Как принимать</b><br>
+                        Солидагорен?</h5>
                     <p>
                         Взрослым и детям старше 12 лет 
                     </p>
@@ -395,7 +395,7 @@
         <div id="comp_wgt" data-drug="193451,193452,193453" data-lang="ru" data-url="https://compendium.com.ua/info/220072/solidagoren/" data-proj="солидагорен" style="border-color: rgb(251, 187, 1); width: 90%;"><div class="title" style="background: rgb(251, 187, 1);"><a href="https://compendium.com.ua/info/220072/solidagoren/" title="СОЛИДАГОРЕН, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
         <div class="map-text">
             <p class="map-text-title">
-                Доказова база
+                Доказательная база
             </p>
             <p>
                 1 УДК 616.62002.2085.322  Фитотерапия хронического рецидивирующего бактериального цистита О.Д. Никитин Национальный медицинский университет имени А.А. Богомольца, г. Киев СЕМЕЙНАЯ МЕДИЦИНА №3 (59), 2015 15 ISSN 2307 5112  
