--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 			<a href="gastritol-new/index.html">gastritol-new</a>
 			<a href="Tansilotren-Moldova/index.html">Tansilotren-Moldova</a>
 			<a href="influcid-LT/index.html">influcid-LT</a>
+			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
 			
 		</section>
 	</main>
@@ -204,6 +205,9 @@
 	}
 	a:nth-child(40)::before {
 		background: url("./influcid-LT/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(41)::before {
+		background: url("./Tansilotren-Li/bg.png")no-repeat center / cover;
 	}
 </style>
 
