--- a/Tansilotren-Li/index.html
+++ b/Tansilotren-Li/index.html
@@ -55,7 +55,9 @@
         </div>
     </div>
 
-    <a class="instruction instruction-en" href="./instruction.pdf"></a>
+    <a class="instruction" href="./instruction.pdf">
+            <p class="translated-text" key="instruction">instrukcija</p>
+      </a>
 
 
 <!--    end navigation-->
