--- a/Esberitoks/index_ru.html
+++ b/Esberitoks/index_ru.html
@@ -77,9 +77,9 @@
       </div>
       <div class="header-custom__text">
         <h1>О,НЕТ!</h1>
-        <h2>Снова подцепила вирус?!</h2>
+        <h2>Снова этот вирус?!</h2>
         <div class="header-custom__img"></div>
-        <p>Заблокируй наступление и преодолей простуду с помощью Есберитокс<sup>1</sup></p>
+        <p>Эсберитокс - ускоряет выздоровление при простуде<sup>1</sup></p>
       </div>
   </div>
   <a name="diagnosis"></a>
@@ -93,7 +93,7 @@
 
   <div class="overrun-container">
 
-    <h2 class="translated-text" key="g10">4 ЕФЕКТА ЕСБЕРИТОКС<br><b>ДЛЯ БЫСТРОГО ВЫЗДОРОВЛЕНИЯ<sup>1</sup></b></h2>
+    <h2 class="translated-text" key="g10">4  ЭФФЕКТА ЭСБЕРИТОКС<br><b>ДЛЯ БЫСТРОГО ВЫЗДОРОВЛЕНИЯ<sup>1</sup></b></h2>
 
     <div class="product-media"></div>
 
@@ -124,7 +124,7 @@
     </div>
 
   </div>
-  <p class="made-in overrun-trigger translated-text" key="g9">Препарат от простуды №1 в Германии</p>
+  <p class="made-in overrun-trigger translated-text" key="g9">Оригинальный препарат из Германии</p>
   <a name="overrun"></a>
 
   <div class="action">
@@ -136,7 +136,7 @@
         <p>Усиливает выработку антител<br>против вирусов и бактерий</p>
         <button class="accordion">Подробнее</button>
         <div class="panel">
-          <p>БАПТИЗИЯ красильная относится к семейству бобовых, многие представители которой известны своими целебными свойствами. Баптизия является звездой даже среди своих прославленных родственников благодаря уникальной способности активировать В-лимфоциты и увеличивать образования антител<sup>1</sup> против возбудителей как вирусных, так и бактериальных инфекций. Это уменьшает риск развития осложнений и помогает реже болеть<sup>2</sup>.<br>
+          <p>БАПТИЗИЯ красильная является звездой среди целебных растений благодаря уникальной способности активировать Влимфоциты и увеличивать образование антител<sup>1</sup> против возбудителей как вирусных, так и бактериальных инфекций.<br> <b>Это уменьшает риск развития осложнений и помогает реже болеть<sup>2</sup>.</b><br>
             1Classen B., Thude S., Blaschek W., Wack M., Bodinet C., 2006
             2Юрцева А.П., Фофанова Е.В., Боднар О.П., 2014
           </p>
@@ -144,11 +144,11 @@
       </div>
       <div class="action__plate">
         <div class="action__img"></div>
-        <h6>ЕХИНАЦЕЯ<br>пурпурная и паллида</h6>
+        <h6>ЕХИНАЦЕЯ<br>пурпурная</h6>
         <p>Активизирует экстренную иммунную<br>защиту</p>
         <button class="accordion">Подробнее</button>
         <div class="panel">
-          <p>ЕХИНАЦЕЯ пурпурная и Эхинацея паллида уже давно получили признание как эффективные растительные средства для лечения простуды и ОРВИ в США и странах Европы. Во время атаки вирусов они обеспечивают быстрое реагирование клеток первой линии иммунной защиты - макрофагов<sup>1</sup> и натуральных киллеров<sup>2</sup> на проникновение инфекционных агентов. Быстрый ответ иммунной системы ускоряет выздоравление<sup>3</sup>.<br>
+          <p>ЕХИНАЦЕЯ пурпурная и Эхинацея паллида уже давно получили признание как эффективные растительные средства для лечения простуды и ОРВИ в США и странах Европы. Во время атаки вирусов они обеспечивают быстрое реагирование клеток первой линии иммунной защиты - макрофагов<sup>1</sup> и натуральных киллеров<sup>2</sup> на проникновение инфекционных агентов.<br> <b>Быстрый ответ иммунной системы ускоряет выздоравление<sup>3</sup>.</b><br>
             1Fu A. et al., 2017
             2See D.M., Broumand N., Sahl  L., Tilles J.G., 1997
             3Henneicke-von Zepelin H., Hentschel C, Schnitker J., Kohnen R., Kohler G., Wustenberg P., 1999
@@ -161,7 +161,7 @@
         <p>Усиливает специфический противовирусный<br>ответ</p>
         <button class="accordion">Подробнее</button>
         <div class="panel">
-          <p>Туя западная известна своими противовирусными свойствами, и входит в состав лекарств против заболеваний, вызванных вирусом папилломы человека<sup>1</sup>. Экстракт Туи обладает способностью активировать Т-лимфоцити<sup>2</sup>, от которых зависит сила и направленность иммунного ответа в случае инфекции. Как следствие - заболевание протекает легче, а выздоровление наступает быстрее<sup>3</sup>.<br>
+          <p>Туя западная известна своими противовирусными свойствами, и входит в состав лекарств против заболеваний, вызванных вирусом папилломы человека<sup>1</sup>. Экстракт Туи обладает способностью активировать Т-лимфоциты<sup>2</sup>, от которых зависит сила и направленность иммунного ответа в случае инфекции.<br> <b>Как следствие - заболевание протекает легче, а выздоровление наступает быстрее<sup>3</sup>.</b><br>
             1Alves L.D.S. et al., 2014
             2Gohla S.H, Haubeck HD, Schrum S, Soltau H, Neth RD. Activation of CD4-positive T cells by polysaccharide fractions isolated from the Cupressaceae Thuja occidentalis L. (Arborvitae). J Allergy Clin Immunol 1986;77:268–72.
             3Henneicke-von Zepelin H. et al., 2019
