--- a/Esberitoks/symptom3_ru.html
+++ b/Esberitoks/symptom3_ru.html
@@ -97,7 +97,7 @@
     <div class="product__img"></div>
     <div class="product__text">
       <h3>ЭСБЕРИТОКС</h3>
-      <p>ЭСБЕРИТОКС – УСКОРЯЕТ ВЫЗДОРОВЛЕНИЕ ПРИ РЕСПИРАТОРНЫХ ВИРУСНЫХ ЗАБОЛЕВАНИЯХ!</p>
+      <p>УСКОРЯЕТ ВЫЗДОРОВЛЕНИЕ ПРИ РЕСПИРАТОРНЫХ ВИРУСНЫХ ЗАБОЛЕВАНИЯХ!</p>
     </div>
   </div>
   <a name="treatment"></a>
