--- a/gastritol-new/index-ru.html
+++ b/gastritol-new/index-ru.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-<a target="_blank" class="instruction" href="">
+<a target="_blank" class="instruction" href="./instruction.pdf">
             <p class="translated-text" key="instruction">Инструкция</p>
       </a>
 
