--- a/influcid-Georgia/index.html
+++ b/influcid-Georgia/index.html
@@ -84,7 +84,7 @@
         <h2>უპირატესობა</h2>
         <div class="block-1__text">
           <p>
-            აღმოფხვრის გაციების ტიპურ სიმპტომებს.¹
+            უზრუნველყოფს გაციების ტიპური სიმპტომების მოხსნა.¹
           </p>
           <p>
             ამცირებს სიმპტომური საშუალებების გამოყენების სიხშირეს (სიცხის დამწევი, ცხვირის წვეთები, ხველის საწინააღმდეგო).²
@@ -110,17 +110,17 @@
           <div class="block-2__text">
             <p>ამცირებს ტემპერატურას</p>
             <p>აღმოფხვრის სხეულში ტეხვის შეგრძნებას</p>
-            <p>ხსნის თავის ტკივილს</p>
+            <p>ახდენს სხეულში ტეხვის შეგრძნების კუპირებას</p>
             <p>ამცირებს ცხვირის გაჭედილობას</p>
             <p>აღმოფხვრის ყელის გაღიზიანებას და ტკივილს</p>
-            <p>თავიდან გვაცილებს დაავადების განვითარებას</p>
+            <p>აქრობს ყელის გაღიზიანებას და ტკივილს</p>
           </div>
         </div>
       </div>
       <a name="block-3"></a>
       <div class="block-3">
         <h2>
-          6 ბუნებრივი კომპონენტები <br />
+          6 ბუნებრივი კომპონენტი <br />
           ვირუსებთან საბრძოლველად
         </h2>
         <div class="prod-mobile"></div>
@@ -354,7 +354,7 @@
     <div class="block-6__container">
       <div class="block-6__container-img"><p>2020 სეზონური გრიპი</p></div>
       <div class="block-6__container-text"><p>ეპიდემიოლოგიური სეზონი დაიწყო და უკვე დროა მოვემზადოთ. ყურადღება მიაქციეთ, რომ გრიპი და მრვი (მწვავე რესპირაციული ვირუსული ინფექცია) განსხვავდება - გრიპის გამომწვევია გრიპის ვირუსის სხვადასხვა შტამი (ერთი სახეობის ვირუსის სხვადასხვა ვარიანტი, რომლებიც განსხვავდებიან მთელი რიგი მახასიათებლებით), ხოლო მრვი-ს გამომწვევი შესაძლებელია იყოს 200-მდე სხვადასხვა ვირუსი, რომლებიც ხშირად ერთმანეთთან გენეტიკურად  არ არიან დაკავშირებული  და მიეკუთვნებიან დაავადების გამომწვევ სხვადასხვა ჯგუფს. </p>
-        <p>რას უნდა ველოდოთ ახალ სეზონზე 2019-2020-ში?</p>
+        <p>რას უნდა ველოდოთ ახალ სეზონზე 2020-2021-ში?</p>
       </div>
       <button class="accordion">დეტალურად</button>
       <div class="panel">
@@ -411,7 +411,7 @@
           <p>ძილიანობა ან ძილის დარღვევა;</p>
           <p>მადის დაქვეითება;</p>
           <p>განწყობის გაუარესება, გაღიზიანებადობა;</p>
-          <p>ყელის ტკივილი და ჩახვევის შეგრძნება ;</p>
+          <p>ყელის ტკივილი და ჩახეხვის შეგრძნება ;</p>
           <p>შემცივნება და ცხელება;</p>
           <p>რინიტი - დასაწყისში წყლიანი გამონადენი, რომელიც ჩაედინება ხახის უკანა კედელზე, მოგვიანებით - ცხვირის გაჭედილობის შეგრძნება და ცხვირით სუნთქვის დარღვევა, ყნოსვის დაქვეითება, ცემინება;¹</p>
         </div>
