--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -23,12 +23,12 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">kaerda bo</a>
+          <a class="where-to-buy where-to-buy__desktop" href="#block-5">kaerda bor</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
               <ul id="menu">
-                <li><a class="navmenu" href="#block-1" >Afzalliklari</a></li>
+                <li><a class="navmenu" href="#block-1" >Afzalliklar</a></li>
                 <li><a class="navmenu" href="#block-2" >Effektlar</a></li>
                 <li><a class="navmenu" href="#block-3" >Tarkibi</a></li>
                 <li><a class="navmenu" href="#block-4" >Qollanilishi</a></li>
@@ -38,14 +38,14 @@
             </div>
           </div>
           <div class="desctop-navigation">
-            <a class="navmenu" href="#block-1" >Afzalliklari</a>
+            <a class="navmenu" href="#block-1" >Afzalliklar</a>
               <a class="navmenu" href="#block-2" >Effektlar</a>
               <a class="navmenu" href="#block-3" >Tarkibi</a>
               <a class="navmenu" href="#block-4" >Qollanilishi</a>
-              <a class="where-to-buy" href="#block-5" >kaerda bo</a>
+              <a class="where-to-buy" href="#block-5" >kaerda bor</a>
               <a href="index.html" >узб</a>
           </div>
-          <a class="instruction" href="./instruction.pdf"
+          <a target="_blank" class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">kullash<br> boyicha<br> yuriknoma</p></a
           >
         </div>
@@ -267,7 +267,7 @@
             Og`zingizda sekin eridigan tabletkalar.Yosh bollar uchun 3 yoshdan kattalarga tabletkani suyug`lik bilan eritib berishni tafsiya etiladi yoki uni mayda bo`lakchalarga bo`lib berish kerak. Dorini yarim soat oldin yoki kegin ovqatdan so`ng istemol qilish kerak.
           </b>
         </div>
-        <a class="buy-btn pill-btn"><p>kaerda bo?</p></a>
+        <a class="buy-btn pill-btn"><p>kaerda bor?</p></a>
       </div>
 
 
@@ -356,8 +356,8 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
             </div>
 
             <div class="block-7">
-              <h2>QAYERDAN OLAMIZ?</h2>
-              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
+              <!-- <h2>QAYERDAN OLAMIZ?</h2>
+              <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script> -->
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
                 <h3>dalillar bazasi</h3>
