--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -75,7 +75,7 @@
         </div>
       </header>
       <div class="block-1">
-        <h2>Manfaatlar</h2>
+        <h2>Afzalliklar</h2>
         <div class="block-1__text">
           <p>
             Istima simptomlarni yo`qotish.¹
