--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -23,7 +23,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">kaerda bor</a>
+          <a target="_blank" class="where-to-buy where-to-buy__desktop" href="./where_buy.pdf">kaerda bor</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -42,7 +42,7 @@
               <a class="navmenu" href="#block-2" >Effektlar</a>
               <a class="navmenu" href="#block-3" >Tarkibi</a>
               <a class="navmenu" href="#block-4" >Qollanilishi</a>
-              <a class="where-to-buy" href="#block-5" >kaerda bor</a>
+              <a target="_blank" class="where-to-buy" href="./where_buy.pdf" >kaerda bor</a>
               <a href="index.html" >узб</a>
           </div>
           <a target="_blank" class="instruction" href="./instruction.pdf"
