--- a/influcid-Uzbekistan/index.html
+++ b/influcid-Uzbekistan/index.html
@@ -23,7 +23,7 @@
 
         <div class="navigation-logo">
           <a  href="index.html" class="logo">Influcid</a>
-          <a class="where-to-buy where-to-buy__desktop" href="#block-5">КАЕРДА БОР</a>
+          <a target="_blank" class="where-to-buy where-to-buy__desktop" href="./where_buy.pdf">КАЕРДА БОР</a>
           <div class="navigation-top" role="navigation">
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
@@ -42,7 +42,7 @@
               <a class="navmenu" href="#block-2" >Эффектлар</a>
               <a class="navmenu" href="#block-3" >Таркиби</a>
               <a class="navmenu" href="#block-4" >Кулланилиши</a>
-              <a class="where-to-buy" href="#block-5" >КАЕРДА БОР</a>
+              <a target="_blank" class="where-to-buy" href="./where_buy.pdf" >КАЕРДА БОР</a>
               <a href="index-usb.html" >uzb</a>
           </div>
           <a target="_blank" class="instruction" href="./instruction.pdf"
