--- a/Esberitoks/index.html
+++ b/Esberitoks/index.html
@@ -79,7 +79,7 @@
         <h1>О, НІ!</h1>
         <h2>ЗНОВУ ЦЕЙ ВІРУС?!</h2>
         <div class="header-custom__img"></div>
-        <p>Есберітокс - прискорює одужання при застуді<sup>1</sup></p>
+        <p>Есберітокс – допомагає подолати причину хвороби, полегшує симптоми і прискорює одужання при ГРВІ<sup>1</sup></p>
       </div>
   </div>
   <a name="diagnosis"></a>
@@ -128,7 +128,7 @@
   <a name="overrun"></a>
 
   <div class="action">
-    <h2>А ЯК ДІЄ ЕСБЕРІТОКС?<br><b>ПРИРОДНІ КОМПОНЕНТИ ЗМІЦНЮЮТЬ ІМУНІТЕТ</b></h2>
+    <h2>А ЯК ДІЄ ЕСБЕРІТОКС?<br><b>РОСЛИННІ КОМПОНЕНТИ ПІДСИЛЮЮТЬ ІМУННУ ВІДПОВІДЬ​</b></h2>
     <div class="action__plate-container">
       <div class="action__plate">
         <div class="action__img"></div>
