--- a/Esberitoks/index_ru.html
+++ b/Esberitoks/index_ru.html
@@ -79,7 +79,7 @@
         <h1>О,НЕТ!</h1>
         <h2>Снова этот вирус?!</h2>
         <div class="header-custom__img"></div>
-        <p>Эсберитокс - ускоряет выздоровление при простуде<sup>1</sup></p>
+        <p>Эсберитокс – помогает преодолеть причину болезни, облегчает симптомы и ускоряет выздоровление при ОРВИ<sup>1</sup></p>
       </div>
   </div>
   <a name="diagnosis"></a>
@@ -93,7 +93,7 @@
 
   <div class="overrun-container">
 
-    <h2 class="translated-text" key="g10">4  ЭФФЕКТА ЭСБЕРИТОКС<br><b>ДЛЯ БЫСТРОГО ВЫЗДОРОВЛЕНИЯ<sup>1</sup></b></h2>
+    <h2 class="translated-text" key="g10">4 ЭФФЕКТА ЭСБЕРИТОКС<br><b>ДЛЯ БЫСТРОГО ВЫЗДОРОВЛЕНИЯ<sup>1</sup></b></h2>
 
     <div class="product-media"></div>
 
@@ -124,11 +124,11 @@
     </div>
 
   </div>
-  <p class="made-in overrun-trigger translated-text" key="g9">Оригинальный препарат из Германии</p>
+  <p class="made-in overrun-trigger translated-text" key="g9">Оригинальный препарат из Германии​</p>
   <a name="overrun"></a>
 
   <div class="action">
-    <h2>А КАК ДЕЙСТВУЕТ ЕСБЕРИТОКС?<br><b>Природные компоненты укрепляют иммунитет</b></h2>
+    <h2>А КАК ДЕЙСТВУЕТ ЭСБЕРИТОКС?<br><b>РАСТИТЕЛЬНЫЕ КОМПОНЕНТЫ УСИЛИВАЮТ ИМУННЫЙ ОТВЕТ​</b></h2>
     <div class="action__plate-container">
       <div class="action__plate">
         <div class="action__img"></div>
@@ -144,7 +144,7 @@
       </div>
       <div class="action__plate">
         <div class="action__img"></div>
-        <h6>ЕХИНАЦЕЯ<br>пурпурная</h6>
+        <h6>ЭХИНАЦЕЯ<br>пурпурная</h6>
         <p>Активизирует экстренную иммунную<br>защиту</p>
         <button class="accordion">Подробнее</button>
         <div class="panel">
