--- a/Esberitoks/symptom3.html
+++ b/Esberitoks/symptom3.html
@@ -89,7 +89,7 @@
         <div class="product__img"></div>
         <div class="product__text">
           <h3>Есберітокс</h3>
-          <p>ЕСБЕРІТОКС - ПРИСКОРЮЄ ОДУЖАННЯ ПРИ РЕСПІРАТОРНИХ ВІРУСНИХ? ЗАХВОРЮВАННЯХ!</p>
+          <p>ПРИСКОРЮЄ ОДУЖАННЯ ПРИ РЕСПІРАТОРНИХ ВІРУСНИХ? ЗАХВОРЮВАННЯХ!</p>
         </div>
       </div>
     <a name="treatment"></a>
