--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -22,7 +22,7 @@
                 <a class="navmenu" href="#block-2">Mod de administrare </a>
                 <a class="navmenu" href="#block-3">Informații utile </a>
                 <a class=" where-to-buy" href="#block-4">Unde puteți procura </a>
-                <!-- <a class="lang" href="index-en.html">en</a> -->
+                 <a class="lang" href="index-ru.html">ru</a>
             </div>
 
             <!--        mobile menu-->
@@ -44,7 +44,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <!-- <a class="lang" href="index-en.html">en</a> -->
+                             <a class="lang" href="index-ru.html">ru</a>
                         </li>
                     </ul>
                 </div>
