--- a/Tansilotren-Georgia/index.html
+++ b/Tansilotren-Georgia/index.html
@@ -339,16 +339,13 @@
                     
                 <p> რეკურენტული ტონზილიტის სამკურნალოდ გამოიყენება სხვადასხვა ჯგუფის პრეპარატები, რომელთა მოქმედებაც  მიმართულია ინფექციის აღმოსაფხვრელად (იმუნომოდულატორები, ვიტამინები, ნატურალური კომპლექსური პრეპარატები).</p>
 
-                <p>80 წელზე მეტია ანგინისა და რეკურენტული ტონზილიტის წარმატებული მკურნალობისთვის გამოიყენება გერმანული  ნატურალური კომპლექსური პრეპარატი ტონზილოტრენი (DHU, გერმანია).
-                    ტონზილოტრენი - ხუთი აქტიური ნატურალური კომპონენტის კომბინაციაა.
-                    ყელის ვირუსული და ბაქტერიული ინფექციების დროს, ტონზილოტრენი მიმდინარე ანთებითი პროცესის სხვადასხვა სტადიაზე ხსნის ანთებას და ასტიმულირებს ორგანიზმის საკუთარ დაცვით მექნიზმებს.ეს იწვევს  ჰიპერტროფიული ნუშურების შემცირებას.</p>
+                <p>80 წელზე მეტია ანგინისა და რეკურენტული ტონზილიტის წარმატებული მკურნალობისთვის გამოიყენება გერმანული ნატურალური კომპლექსური პრეპარატი ტონზილოტრენი (DHU, გერმანია). ტონზილოტრენი - ხუთი აქტიური ნატურალური კომპონენტის კომბინაციაა. ყელის ვირუსული და ბაქტერიული ინფექციების დროს, ტონზილოტრენი მიმდინარე ანთებითი პროცესის სხვადასხვა სტადიაზე ხსნის ანთებას და ასტიმულირებს ორგანიზმის საკუთარ დაცვით მექნიზმებს. ეს იწვევს ჰიპერტროფიული ნუშურების ზომაში შემცირებას.</p>
 
                 <p>მნიშვნელოვანია, რომ ტონზილოტრენი მოქმედებს ნუშურებზე, აქრობს ანთებას და აღადგენს მათ დაცვით ფუნქციას, რითაც ხელს უწყობს განმეორებითი ანგინის სიხშირისა და აღმოცენების რისკის შემცირებას. ასევე მცირდება  ანტიბიოტიკების გამოყენების აუცილებლობა<sup>1</sup>.</p>
 
                 <p>პრეპარატი შეიძლება გამოვიყენოთ ანგინის როგორც სამკურნალოდ, ასევე საპროფილაქტიკოდ. ინიშნება ბავშვებში 2 წლიდან და მოზრდილებში. ხშირი ანგინებისადმი მიდრეკილების დროს,  წლის განმავლობაში ტონზილოტრენით რამდენიმე კურსის ჩატარებამ, შესაძლებელია შეგინარჩუნოთ ნუშურები - ადამიანის ორგანიზმის მნიშვნელოვანი იმუნური ორგანო!</p>
 
-                <p><b>კურსი: 1 ტაბ. 3-ჯერ დღეში 6-8 კვირის განმავლობაში. ტონზილოტრენი - ანგინის უსაფრთხო მკურნალობა და პროფილაქტიკა.
-                    გისურვებთ, რომ თქვენ და თქვენი ნუშურები არასდროს შეწუხდეთ ქრონიკული ტონზილიტით!</b></p>
+                <p><b>კურსი: 1 ტაბ. 3-ჯერ დღეში 6-8 კვირის განმავლობაში. ტონზილოტრენი - ანგინის უსაფრთხო მკურნალობა და პროფილაქტიკა. გისურვებთ, რომ თქვენ და თქვენი ნუშურები აღარასდროს შეწუხდეთ ქრონიკული ტონზილიტით! </b></p>
                 <p>1. Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</p>
             </div>
         </div>
@@ -418,7 +415,7 @@
         <div class="block-5__plate">
             <div class="block-5__text">
                 <h4>საჭიროა თუ არა ტონზილების ამოკვეთა?</h4>
-                <p>ბავშვებში ქრონიკული ტონზილიტის მკურნალობის აქტუალური ტენდენციები ემყარება მაქსიმალურად ფრთხილ დამოკიდებულებას ნუშურებისადმი, რადგან იმუნოკომპეტენტური ორგანოა(იმუნიტეტზე პასუხისმგებელი ორგანო), რომლის ამოკვეთა გამართლებულია მხოლოდ ვალდეიერ-პიროგოვის ლიმფოიდური რგოლის დადასტურებული ფუნქციური დარღვევის ან ჰიპერტოფიისას.</p>
+                <p>ბავშვებში ქრონიკული ტონზილიტის მკურნალობისას თანამედროვე მიდგომა გულისხმობს მაქსიმალურად ფრთხილ დამოკიდებულებას ნუშურებისადმი, როგორც იმუნოკომპეტენტური ორგანოსადმი (იმუნიტეტზე პასუხისმგებელი ორგანო), რომლის ამოკვეთა გამართლებულია მხოლოდ ვალდეიერ-პიროგოვის ლიმფოიდური რგოლის დადასტურებული ფუნქციური დარღვევის დროს ან ჰიპერტოფიისას. </p>
             </div>
             <div class="block-5__img"></div>
         </div>
@@ -428,7 +425,7 @@
                 <div class="test-img-mobile"></div>
                 <div class="block-5__text">
                     <h4>საჭიროა თუ არა ტონზილების ამოკვეთა?</h4>
-                    <p>ბავშვებში ქრონიკული ტონზილიტის მკურნალობის აქტუალური ტენდენციები ემყარება მაქსიმალურად ფრთხილ დამოკიდებულებას ნუშურებისადმი, რადგან იმუნოკომპეტენტური ორგანოა(იმუნიტეტზე პასუხისმგებელი ორგანო), რომლის ამოკვეთა გამართლებულია მხოლოდ ვალდეიერ-პიროგოვის ლიმფოიდური რგოლის დადასტურებული ფუნქციური დარღვევის ან ჰიპერტოფიისას.</p>
+                    <p>ბავშვებში ქრონიკული ტონზილიტის მკურნალობისას თანამედროვე მიდგომა გულისხმობს მაქსიმალურად ფრთხილ დამოკიდებულებას ნუშურებისადმი, როგორც იმუნოკომპეტენტური ორგანოსადმი (იმუნიტეტზე პასუხისმგებელი ორგანო), რომლის ამოკვეთა გამართლებულია მხოლოდ ვალდეიერ-პიროგოვის ლიმფოიდური რგოლის დადასტურებული ფუნქციური დარღვევის დროს ან ჰიპერტოფიისას. </p>
                 </div>
             </div>
             <button class="accordion popup-btn block-5__popup">დეტალურად</button>
@@ -479,7 +476,7 @@
                     ქრონიკული ტონზილიტით ავადობა:<br>
                     მოზრდილები: 5-6%-დან 37%-მდე<br>
                     ბავშვები: 15%-დან 63%-მდე <sup>1-4</sup><br>
-                    განსაკუთრებით მაღალი ავადობა მოდის 16-20 წლის ასაკობრივ ჯგუფზე.  ბავშვთა ზოგად პოპულაციაში ქრონიკული ტონზილიტი 15%-იანი სიხშირით ვრცელდება, ხოლო ხშირად მოავადე ბავშვებში 43%-ით, რაც კიდევ ერთხელ ადასტურებს ნუშურების მნიშვნელოვან როლს ბავშვის იმუნურ დაცვაში. <sup>5</sup>.
+                    განსაკუთრებით მაღალი ავადობა მოდის 16-20 წლის ასაკობრივ ჯგუფზე. ბავშვთა ზოგად პოპულაციაში ქრონიკული ტონზილიტი 15%-იანი სიხშირით ვრცელდება, ხოლო ხშირად მოავადე ბავშვებში 43%-ით, რაც კიდევ ერთხელ ადასტურებს ნუშურების მნიშვნელოვან როლს ბავშვის იმუნურ დაცვაში. <sup>5</sup>.
                     <p>
                 ტონზილოტრენმა აჩვენა მაღალი ამტანობა და უსაფრთხოება 21 კლინიკურ კვლევაში, სადაც მონაწილეობდა 10 000-ზე მეტი პაციენტი, მათ შორის 8 000-ზე მეტი ბავშვი.
                 ტონზილოტრენი ეფექტური და უსაფრთხოა ანგინისა და ქრონიკული ტონზილიტისას.<br>
@@ -489,7 +486,7 @@
                         • მე-4 დღეს თერაპიული ეფექტი დადგა პაცინეტთა 93,3%-ში;<br>
                         • მე-4 დღეს ტკივილი ყლაპვის დროს მთლიანად აღმოიფხვრა პაციენტთა 56,7%-ში;<br>
                         • მე-10 დღეს ჰემოლიზური სტრეპტოკოკის ანალიზის შედეგი  იყო  უარყოფითი; <br>
-                        • ტოლერანტობა შეფასებულია, როგორც ძალიან კარგი შემთხვევათა 100% -ში<sup>6</sup><br>
+                        • ტოლერანტობა შეფასებულია, როგორც ძალიან კარგი შემთხვევათა 100% -ში.<sup>6</sup><br>
                     </p>
                     <p>
                         1. Maltseva G. S., Grinchuk A. N. Conservative treatment of chronic tonsillitis of streptococcal etiology // Otorhinolaryngology: magazine article - scientific article. — Moscow: Non-profit partnership for promoting the development of the health care and medicine system "Rusmedical group", 2011. — No. 6. — p. 20-23.  <br>
