--- a/influcid-Georgia/index.html
+++ b/influcid-Georgia/index.html
@@ -261,7 +261,7 @@
     </div>
     <div class="bottom-text">
       <p>
-        პრეპარატი გამოიყენება მწვავე რესპირაციული ვირუსული ინფექციის და გრიპის  სიმპტომების პირველივე გამოვლინებისას ან დაუყოვნებლივ დაავადებულთან კონტაქტის შემდეგ, რაც თავიდან აგვაცილებს დაავადების განვითარებას;
+        პრეპარატი გამოიყენება მწვავე რესპირაციული ვირუსული ინფექციის და გრიპის სიმპტომების პირველივე გამოვლინებისას ან დაუყოვნებლივ, დაავადებულთან კონტაქტის შემდეგ, რაც თავიდან აგვაცილებს დაავადების განვითარებას;
 
       </p>
       <p>
@@ -358,7 +358,7 @@
       </div>
       <button class="accordion">დეტალურად</button>
       <div class="panel">
-        <p>ჯანმრთელობის საერთაშორისო ორგანიზაციის მონაცემების მიხედვით, ახალ ეპიდემიოლოგიურ სეზონზე ჩრდილოეთ ნახევარსფეროში მოსალოდნელია გრიპის შემდეგი შტამების ცირკულაცია:</p>
+        <p>ჯანმო-ს მონაცემების მიხედვით, ახალ ეპიდემიოლოგიურ სეზონზე ჩრდილოეთ ნახევარსფეროში მოსალოდნელია გრიპის შემდეგი შტამების ცირკულაცია: </p>
         <ul>
           <li>A/Brisbane/02/2018(H1N1) pdm09;</li>
           <li>A/Kansas/14/2017(H3N2);</li>
@@ -398,7 +398,7 @@
     <div class="block-6__container">
       <div class="block-6__container-img"><p>გაციების მკურნალობა ბავშვებში</p></div>
       <div class="block-6__container-text"><p>
-        გაციებისგან თქვენი პატარას დაცვა, სამწუხაროდ, მთელი სიცოცხლის განმავლობაში  შეუძლებელია. მით უმეტეს, თუ თქვენი პირმშო მთელი დღე იმყოფება. თანატოლების გარემოცვაში. ბაღში ან სკოლაში, საკმარისია ერთი ბავშვი ავად გახდეს, ინფექცია ძალიან სწრაფად ვრცელდება. პატარას ავადმყოფობა ხშირად დედის ბიულეტენზე გასვლას გულისხმობს.  აქ ისმის კითხვა: „ როგორ ვუმკურნალოთ გაციებას? რომელია საუკეთესო საშუალება გაციებასთან ბრძოლაში? შესაძლებელია თუა არა სწრაფად განკურნება? რა უნდა გავაკეთოთ , რომ პატარა რაც შეიძლება იშვიათად გაცივდეს და მაქსიმალურად უმტკივნეულოდ ჩაიაროს დაავადებამ?“
+        გაციებისგან თქვენი პატარას დაცვა, სამწუხაროდ, მთელი სიცოცხლის განმავლობაში შეუძლებელია. მით უმეტეს, თუ თქვენი პირმშო მთელი დღე იმყოფება ბაღსა თუ სკოლაში თანატოლებთან ერთად, სადაც საკმარისია ერთი ბავშვი ავად გახდეს და ინფექცია ძალიან სწრაფად ვრცელდება პატარებს შორის. შვილის ავადმყოფობა ხშირად დედის ბიულეტენზე გასვლას გულისხმობს. აქ ისმის კითხვა: „ როგორ ვუმკურნალოთ გაციებას? რომელია საუკეთესო საშუალება გაციებასთან ბრძოლაში? შესაძლებელია თუ არა სწრაფად განკურნება? რა უნდა გავაკეთოთ , რომ პატარა რაც შეიძლება იშვიათად გაცივდეს და მაქსიმალურად უმტკივნეულოდ ჩაიაროს დაავადებამ?“
       </p>
       </div>
       <button class="accordion">დეტალურად</button>
