--- a/Esberitoks/symptom1.html
+++ b/Esberitoks/symptom1.html
@@ -69,13 +69,11 @@
 
       </div>
       <div class="mobile-text">
-          <h1>О, НІ!</h1>
-          <h2>Грип і застуда - завжди невчасно.
+        <h2>О, НІ! Грип і застуда - завжди невчасно.
             Але можна одужати швидше!</h2>
       </div>
       <div class="header-custom__text">
-        <h1>О, НІ!</h1>
-        <h2>Грип і застуда - завжди невчасно.
+        <h2>О, НІ! Грип і застуда - завжди невчасно.
           Але можна одужати швидше!</h2>
       </div>
   </div>
