--- a/Esberitoks/symptom1_ru.html
+++ b/Esberitoks/symptom1_ru.html
@@ -69,13 +69,11 @@
 
   </div>
   <div class="mobile-text">
-    <h1>О, НЕТ!</h1>
-    <h2>Грипп и простуда - всегда несвоевременно. Но можно выздороветь быстрее!
+    <h2>О, НЕТ! Грипп и простуда - всегда несвоевременно. Но можно выздороветь быстрее!
     </h2>
   </div>
   <div class="header-custom__text">
-    <h1>О, НЕТ!</h1>
-    <h2>Грипп и простуда - всегда несвоевременно. Но можно выздороветь быстрее!
+    <h2>О, НЕТ! Грипп и простуда - всегда несвоевременно. Но можно выздороветь быстрее!
     </h2>
   </div>
 </div>
