--- a/Esberitoks/symptom2_ru.html
+++ b/Esberitoks/symptom2_ru.html
@@ -69,13 +69,11 @@
 
   </div>
   <div class="mobile-text">
-    <h1>О, НЕТ!</h1>
-    <h2>У моего ребенка опять простуда!
+    <h2>О, НЕТ! У моего ребенка опять простуда!
     </h2>
   </div>
   <div class="header-custom__text">
-    <h1>О, НЕТ!</h1>
-    <h2>У моего ребенка опять простуда!
+    <h2>О, НЕТ! У моего ребенка опять простуда!
     </h2>
   </div>
 </div>
