--- a/Esberitoks/symptom3_ru.html
+++ b/Esberitoks/symptom3_ru.html
@@ -69,13 +69,11 @@
 
   </div>
   <div class="mobile-text">
-    <h1>О, НЕТ!</h1>
-    <h2>Почему снова бронхит?
+    <h2>О, НЕТ! Почему снова бронхит?
     </h2>
   </div>
   <div class="header-custom__text">
-    <h1>О, НЕТ!</h1>
-    <h2>Почему снова бронхит?
+    <h2>О, НЕТ! Почему снова бронхит?
     </h2>
   </div>
 </div>
