--- a/Esberitoks/symptom5.html
+++ b/Esberitoks/symptom5.html
@@ -86,7 +86,7 @@
         <div class="product__img"></div>
         <div class="product__text">
           <h3>Есберітокс</h3>
-          <p>ПРИСКОРЮЄ ОДУЖАННЯ ПРИ РЕСПІРАТОРНИХ ВІРУСНИХ? ЗАХВОРЮВАННЯХ!</p>
+          <p>ПРИСКОРЮЄ ОДУЖАННЯ ПРИ РЕСПІРАТОРНИХ ВІРУСНИХ ЗАХВОРЮВАННЯХ!</p>
         </div>
       </div>
     <a name="treatment"></a>
