--- a/Tansilotren-Li/index.html
+++ b/Tansilotren-Li/index.html
@@ -16,7 +16,7 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container logo-container-en" href="#top"></a>
-            <a class="where-to-buy-mob" href="">Where to buy</a>
+            <a class="where-to-buy-mob" href="">Kur įsigyti</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Sudėtis ir veikimas</a>
                 <a class="navmenu" href="#block-2">Vartojimo būdas</a>
@@ -498,6 +498,11 @@
             </div>
 
             <h1>KUR PIRKTI</h1>
+            <div class="apt-container">
+                <a target="_blank" href="https://www.gintarine.lt/tonsilotren-tabletes-n40"></a>
+                <a target="_blank" href="https://www.nvaistine.lt/tonsilotren-tabletes-n40"></a>
+                <a target="_blank" href=""></a>
+            </div>
             <div class="map-text">
                 <h3>Įrodymai</h3>
                 <ol>
@@ -507,6 +512,7 @@
                     <li>According to the project “Rx test — Monitoring of medicines prescriptions” of the company “Proxima Research” with the main diagnosis of chronic tonsillitis in 2017</li>
                     <li><a>https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren</a></li>
                 </ol>
+
             </div>
 
         </div>
