--- a/Esberitoks/symptom2.html
+++ b/Esberitoks/symptom2.html
@@ -69,12 +69,10 @@
 
       </div>
       <div class="mobile-text">
-          <h1>О, НІ!</h1>
-          <h2>У моєї дитини знову застуда!</h2>
+          <h2>О, НІ! У моєї дитини знову застуда!</h2>
       </div>
       <div class="header-custom__text">
-        <h1>О, НІ!</h1>
-        <h2>У моєї дитини знову застуда!</h2>
+        <h2>О, НІ! У моєї дитини знову застуда!</h2>
       </div>
   </div>
   <div class="symptom-container">
