--- a/Esberitoks/symptom3.html
+++ b/Esberitoks/symptom3.html
@@ -69,12 +69,10 @@
 
       </div>
       <div class="mobile-text">
-          <h1>О, НІ!</h1>
-          <h2>Чому знову бронхіт?</h2>
+          <h2>О, НІ! Чому знову бронхіт?</h2>
       </div>
       <div class="header-custom__text">
-        <h1>О, НІ!</h1>
-        <h2>Чому знову бронхіт?</h2>
+        <h2>О, НІ! Чому знову бронхіт?</h2>
       </div>
   </div>
   <div class="symptom-container">
@@ -89,7 +87,7 @@
         <div class="product__img"></div>
         <div class="product__text">
           <h3>Есберітокс</h3>
-          <p>ПРИСКОРЮЄ ОДУЖАННЯ ПРИ РЕСПІРАТОРНИХ ВІРУСНИХ? ЗАХВОРЮВАННЯХ!</p>
+          <p>ПРИСКОРЮЄ ОДУЖАННЯ ПРИ РЕСПІРАТОРНИХ ВІРУСНИХ ЗАХВОРЮВАННЯХ!</p>
         </div>
       </div>
     <a name="treatment"></a>
